components dinamycs propertys

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,15 +1,15 @@
 <div class="container_big-card">
     <div class="big-card__photo">
-        <img src="https://internacionaldaamazoniacom.files.wordpress.com/2021/12/capa-1.jpg"
+        <img src="{{photoCover}}"
         height="200px"
         alt=""
                 >
     </div>
     <div class="big-card__title">
-       <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+       <h1><a href="#">{{cardTitle}}</a></h1>
 
     </div>
     <div class="big-card__description">
-        <p><a href="#">ipsum dolor sit amet, consectetur adipiscing elit. Proin at enim quis lorem efficitur convallis. Phasellus in eros viverra, volutpat arcu quis, dapibus massa. Suspendisse eros libero, porta in hendrerit et, accumsan eu velit. Nulla imperdiet vehicula eleifend.</a></p>
+        <p><a href="#">{{CardDescripton}}</a></p>
     </div>
 </div>
