--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,15 +1,15 @@
 <div class="container_big-card">
     <div class="big-card__photo">
-        <img src="{{photoCover}}"
+        <img src="{{ photoCover }}"
         height="200px"
         alt=""
                 >
     </div>
     <div class="big-card__title">
-       <h1><a href="#">{{cardTitle}}</a></h1>
+       <h1><a [routerLink]="['content', Id]">{{cardTitle}}</a></h1>
 
     </div>
     <div class="big-card__description">
-        <p><a href="#">{{CardDescripton}}</a></p>
+        <p><a href="#">{{cardDescription}}</a></p>
     </div>
 </div>
