--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,26 +1,28 @@
-<header>
-<app-menu-bar></app-menu-bar>
-</header>
+
 <app-menu-title></app-menu-title>
 <div class="container__articles">
     <div class="articles__main">
         <app-big-card 
+        Id="1"
         photoCover="https://internacionaldaamazoniacom.files.wordpress.com/2021/12/capa-1.jpg" 
         cardTitle="NOVO VINGADORES ANUNCIADO" 
-        CardDescripton="Marvel estudios anuncia novo Vingadores, 4 anos após ultimato."></app-big-card>
+        cardDescripton="Marvel estudios anuncia novo Vingadores, 4 anos após ultimato."></app-big-card>
     </div>
     <div class="articles__others">
         <app-small-card
+        Id="2"
         cardTitle="NOVO FILME DOS GUARDIÕES DA GALÁXIA"
         photoCover="https://s2-techtudo.glbimg.com/E-v8xnunDY0WI5ZbVKR3U5FrxO8=/0x0:1068x655/888x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2023/x/A/W4CpeFTUuqJy2ERdGmPQ/guardioes-da-galaxia-3-1068x655.jpg"
         >
         </app-small-card>
         <app-small-card
+        Id="3"
         cardTitle="NOVO AQUAMAN SERÁ LANÇADO EM BREVE"
         photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBjgn89y6Hc6SBhDz9ovIrYALI5RH7BR-lLw&usqp=CAU"
         >
         </app-small-card>
         <app-small-card
+        Id="4"
         cardTitle="FILME DO BESOURO AZUL FLOPA NA BILHETERIA"
         photoCover="https://cinepop.com.br/wp-content/uploads/2023/08/besouro-azul-4-696x391.jpg"
         >
