--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
         Id="1"
         photoCover="https://internacionaldaamazoniacom.files.wordpress.com/2021/12/capa-1.jpg" 
         cardTitle="NOVO VINGADORES ANUNCIADO" 
-        cardDescripton="Marvel estudios anuncia novo Vingadores, 4 anos após ultimato."></app-big-card>
+        cardDescription="Marvel estudios anuncia novo Vingadores, 4 anos após ultimato."></app-big-card>
     </div>
     <div class="articles__others">
         <app-small-card
