--- a/src/app/pages/content/content.component.css
+++ b/src/app/pages/content/content.component.css
@@ -20,8 +20,13 @@
 
 .container__description{
     margin-top: 15px;
+    width: 600px;
 }
 .container__description > p{
     color: rgb(192, 189, 189);
-
+    text-align: justify;
+   
+}
+.container__description > p{
+    margin-top: 10px;
 }
